--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         padding: 0;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Oxygen, Ubuntu, Cantarell, sans-serif;
+        background-color: #1a1a1a;
       }
       .line-clamp-2 {
         display: -webkit-box;
@@ -50,20 +51,20 @@
         margin-bottom: 1em;
       }
       .markdown-content code {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #2a2a2a;
         padding: 0.2em 0.4em;
         border-radius: 3px;
         font-family: monospace;
       }
       .markdown-content pre {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #2a2a2a;
         padding: 1em;
         border-radius: 6px;
         overflow-x: auto;
         margin-bottom: 1em;
       }
       .markdown-content a {
-        color: #a78bfa;
+        color: #60a5fa;
         text-decoration: underline;
       }
       .markdown-content img {
@@ -100,7 +101,6 @@
         setState({ loading: true, error: "", showPortfolio: false });
 
         try {
-          // Fetch user data
           const userResponse = await fetch(
             `https://api.github.com/users/${state.username}`
           );
@@ -109,13 +109,11 @@
           }
           const user = await userResponse.json();
 
-          // Fetch repositories
           const reposResponse = await fetch(
             `https://api.github.com/users/${state.username}/repos?sort=updated&per_page=6`
           );
           const reposData = await reposResponse.json();
 
-          // Try to fetch README from profile repo
           let readme = null;
           try {
             const readmeResponse = await fetch(
@@ -151,12 +149,12 @@
         const { userData, repos, readme } = state;
 
         return `
-                <div class="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-indigo-50 text-gray-900">
+                <div class="min-h-screen bg-zinc-900 text-gray-100">
                     <!-- Header -->
-                    <div class="bg-white shadow-md">
+                    <div class="bg-zinc-800 border-b border-zinc-700">
                         <div class="max-w-6xl mx-auto px-6 py-8">
                             <button onclick="setState({ showPortfolio: false, username: '', userData: null, repos: [], readme: null })" 
-                                    class="mb-6 px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg transition shadow-sm">
+                                    class="mb-6 px-4 py-2 bg-zinc-700 hover:bg-zinc-600 text-gray-100 rounded transition">
                                 ← Generate New Portfolio
                             </button>
                             
@@ -164,21 +162,21 @@
                                 <img src="${userData.avatar_url}" alt="${
           userData.name
         }" 
-                                     class="w-40 h-40 rounded-full border-4 border-indigo-500 shadow-xl">
+                                     class="w-40 h-40 rounded-full border-2 border-zinc-600">
                                 <div class="text-center md:text-left flex-1">
-                                    <h1 class="text-5xl font-bold mb-2 text-gray-900">${
+                                    <h1 class="text-5xl font-bold mb-2 text-gray-100">${
                                       userData.name || userData.login
                                     }</h1>
-                                    <p class="text-xl text-indigo-600 mb-4">@${
+                                    <p class="text-xl text-gray-400 mb-4">@${
                                       userData.login
                                     }</p>
                                     ${
                                       userData.bio
-                                        ? `<p class="text-lg text-gray-600 mb-4">${userData.bio}</p>`
+                                        ? `<p class="text-lg text-gray-300 mb-4">${userData.bio}</p>`
                                         : ""
                                     }
                                     
-                                    <div class="flex flex-wrap gap-4 justify-center md:justify-start text-sm text-gray-600">
+                                    <div class="flex flex-wrap gap-4 justify-center md:justify-start text-sm text-gray-400">
                                         ${
                                           userData.location
                                             ? `
@@ -208,7 +206,7 @@
                                           userData.blog
                                             ? `
                                             <a href="${userData.blog}" target="_blank" rel="noopener noreferrer" 
-                                               class="flex items-center gap-1 hover:text-indigo-600">
+                                               class="flex items-center gap-1 hover:text-gray-200">
                                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
                                                 </svg>
@@ -235,23 +233,23 @@
 
                             <!-- Stats -->
                             <div class="grid grid-cols-3 gap-4 mt-8">
-                                <div class="bg-gradient-to-br from-indigo-500 to-purple-600 rounded-lg p-4 text-center text-white shadow-lg">
-                                    <div class="text-3xl font-bold">${
+                                <div class="bg-zinc-800 border border-zinc-700 rounded p-4 text-center">
+                                    <div class="text-3xl font-bold text-gray-100">${
                                       userData.public_repos
                                     }</div>
-                                    <div class="text-sm opacity-90">Repositories</div>
+                                    <div class="text-sm text-gray-400">Repositories</div>
                                 </div>
-                                <div class="bg-gradient-to-br from-blue-500 to-indigo-600 rounded-lg p-4 text-center text-white shadow-lg">
-                                    <div class="text-3xl font-bold">${
+                                <div class="bg-zinc-800 border border-zinc-700 rounded p-4 text-center">
+                                    <div class="text-3xl font-bold text-gray-100">${
                                       userData.followers
                                     }</div>
-                                    <div class="text-sm opacity-90">Followers</div>
+                                    <div class="text-sm text-gray-400">Followers</div>
                                 </div>
-                                <div class="bg-gradient-to-br from-purple-500 to-pink-600 rounded-lg p-4 text-center text-white shadow-lg">
-                                    <div class="text-3xl font-bold">${
+                                <div class="bg-zinc-800 border border-zinc-700 rounded p-4 text-center">
+                                    <div class="text-3xl font-bold text-gray-100">${
                                       userData.following
                                     }</div>
-                                    <div class="text-sm opacity-90">Following</div>
+                                    <div class="text-sm text-gray-400">Following</div>
                                 </div>
                             </div>
                         </div>
@@ -262,14 +260,14 @@
                       readme
                         ? `
                         <div class="max-w-6xl mx-auto px-6 py-12">
-                            <div class="bg-white rounded-2xl shadow-lg p-8">
-                                <h2 class="text-3xl font-bold mb-6 text-gray-900 flex items-center gap-2">
-                                    <svg class="w-8 h-8 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="bg-zinc-800 border border-zinc-700 rounded p-8">
+                                <h2 class="text-3xl font-bold mb-6 text-gray-100 flex items-center gap-2">
+                                    <svg class="w-8 h-8 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
                                     </svg>
                                     About Me
                                 </h2>
-                                <div class="markdown-content text-gray-700">
+                                <div class="markdown-content text-gray-300">
                                     ${readme}
                                 </div>
                             </div>
@@ -280,8 +278,8 @@
 
                     <!-- Projects -->
                     <div class="max-w-6xl mx-auto px-6 py-12">
-                        <h2 class="text-3xl font-bold mb-8 text-gray-900 flex items-center gap-2">
-                            <svg class="w-8 h-8 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <h2 class="text-3xl font-bold mb-8 text-gray-100 flex items-center gap-2">
+                            <svg class="w-8 h-8 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"/>
                             </svg>
                             Recent Projects
@@ -293,11 +291,11 @@
                                 <a href="${
                                   repo.html_url
                                 }" target="_blank" rel="noopener noreferrer" 
-                                   class="bg-white rounded-xl p-6 hover:shadow-xl transition border border-gray-200 hover:border-indigo-400 group">
-                                    <h3 class="text-xl font-semibold mb-2 text-indigo-600 group-hover:text-indigo-700">${
+                                   class="bg-zinc-800 border border-zinc-700 rounded p-6 hover:border-zinc-600 transition group">
+                                    <h3 class="text-xl font-semibold mb-2 text-gray-100 group-hover:text-white">${
                                       repo.name
                                     }</h3>
-                                    <p class="text-gray-600 text-sm mb-4 line-clamp-2">
+                                    <p class="text-gray-400 text-sm mb-4 line-clamp-2">
                                         ${
                                           repo.description ||
                                           "No description available"
@@ -323,7 +321,7 @@
                                           repo.language
                                             ? `
                                             <div class="flex items-center gap-1">
-                                                <div class="w-3 h-3 rounded-full bg-indigo-500"></div>
+                                                <div class="w-3 h-3 rounded-full bg-gray-500"></div>
                                                 <span>${repo.language}</span>
                                             </div>
                                         `
@@ -338,12 +336,12 @@
                     </div>
 
                     <!-- Footer -->
-                    <div class="bg-white shadow-md mt-12">
+                    <div class="bg-zinc-800 border-t border-zinc-700 mt-12">
                         <div class="max-w-6xl mx-auto px-6 py-8 text-center">
                             <a href="${
                               userData.html_url
                             }" target="_blank" rel="noopener noreferrer" 
-                               class="inline-flex items-center gap-2 px-6 py-3 bg-gray-900 hover:bg-gray-800 text-white rounded-lg transition text-lg font-semibold shadow-lg">
+                               class="inline-flex items-center gap-2 px-6 py-3 bg-zinc-700 hover:bg-zinc-600 text-gray-100 rounded transition text-lg font-semibold">
                                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"/>
                                 </svg>
@@ -357,25 +355,25 @@
 
       function renderInput() {
         return `
-                <div class="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-indigo-50 flex items-center justify-center p-6">
-                    <div class="bg-white rounded-2xl shadow-2xl p-8 max-w-md w-full border border-gray-200">
+                <div class="min-h-screen bg-zinc-900 flex items-center justify-center p-6">
+                    <div class="bg-zinc-800 border border-zinc-700 rounded p-8 max-w-md w-full">
                         <div class="text-center mb-8">
-                            <svg class="w-16 h-16 mx-auto mb-4 text-gray-900" fill="currentColor" viewBox="0 0 24 24">
+                            <svg class="w-16 h-16 mx-auto mb-4 text-gray-100" fill="currentColor" viewBox="0 0 24 24">
                                 <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"/>
                             </svg>
-                            <h1 class="text-4xl font-bold text-gray-900 mb-2">Portfolio Generator</h1>
-                            <p class="text-gray-600">Generate a stunning portfolio from your GitHub profile</p>
+                            <h1 class="text-4xl font-bold text-gray-100 mb-2">Portfolio Generator</h1>
+                            <p class="text-gray-400">Generate a portfolio from your GitHub profile</p>
                         </div>
 
                         <div class="space-y-4">
                             <div>
-                                <label class="block text-gray-700 text-sm font-semibold mb-2">GitHub Username</label>
+                                <label class="block text-gray-300 text-sm font-semibold mb-2">GitHub Username</label>
                                 <input 
                                     type="text" 
                                     id="username-input"
                                     value="${state.username}"
                                     placeholder="octocat"
-                                    class="w-full px-4 py-3 rounded-lg bg-gray-50 border border-gray-300 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"
+                                    class="w-full px-4 py-3 rounded bg-zinc-700 border border-zinc-600 text-gray-100 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-zinc-500 focus:border-transparent"
                                     onkeypress="if(event.key === 'Enter') fetchGitHubData()"
                                 >
                             </div>
@@ -383,7 +381,7 @@
                             ${
                               state.error
                                 ? `
-                                <div class="bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-lg">
+                                <div class="bg-red-900 border border-red-700 text-red-200 px-4 py-3 rounded">
                                     ${state.error}
                                 </div>
                             `
@@ -393,11 +391,11 @@
                             <button 
                                 onclick="fetchGitHubData()"
                                 ${state.loading ? "disabled" : ""}
-                                class="w-full bg-indigo-600 hover:bg-indigo-700 disabled:bg-gray-400 text-white font-semibold py-3 px-6 rounded-lg transition duration-200 flex items-center justify-center gap-2 shadow-lg">
+                                class="w-full bg-zinc-700 hover:bg-zinc-600 disabled:bg-zinc-800 text-gray-100 font-semibold py-3 px-6 rounded transition duration-200 flex items-center justify-center gap-2">
                                 ${
                                   state.loading
                                     ? `
-                                    <div class="animate-spin rounded-full h-5 w-5 border-b-2 border-white"></div>
+                                    <div class="animate-spin rounded-full h-5 w-5 border-b-2 border-gray-100"></div>
                                     <span>Generating...</span>
                                 `
                                     : `
@@ -432,7 +430,6 @@
         }
       }
 
-      // Initial render
       render();
     </script>
   </body>
